force-app/main/default/objects/Checklist_Template__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When it&apos;s Active, the Template is available for Checklist creation.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>