force-app/main/default/objects/Checklist_Template__c/fields/Checklist_Count__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Count__c</fullName>
    <label>Checklist Count</label>
    <summaryForeignKey>Checklist_Template_Item__c.Checklist_Template__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>