force-app/main/default/objects/Checklist_Template__c/fields/Checklist_Template_Title__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Template_Title__c</fullName>
    <label>Checklist Template Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>