force-app/main/default/objects/Checklist_Template__c/fields/Due_Days__c.field-meta.xml
<CustomField>
    <fullName>Due_Days__c</fullName>
    <inlineHelpText>Number of days a checklist of this template is due from the date of creation.</inlineHelpText>
    <label>Due Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>