force-app/main/default/objects/Checklist_Template__c/fields/IsLocked__c.field-meta.xml
<CustomField>
    <fullName>IsLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the Template is locked, a checklist of this template can not be added with more items.</inlineHelpText>
    <label>Is Locked?</label>
    <type>Checkbox</type>
</CustomField>