force-app/main/default/objects/Checklist_Template__c/fields/Sequential__c.field-meta.xml
<CustomField>
    <fullName>Sequential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this is True, the items of the checklist need to be completed/checked sequentially from the top. Checking is not allowed if the previous item is not checked.</description>
    <label>Sequential</label>
    <type>Checkbox</type>
</CustomField>