force-app/main/default/objects/Checklist_Template__c/fields/Template_Used_Count__c.field-meta.xml
<CustomField>
    <fullName>Template_Used_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Template Used Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>