force-app/main/default/objects/Checklist_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Checklist_Template_Title__c</columns>
    <columns>Active__c</columns>
    <columns>IsLocked__c</columns>
    <columns>Template_Used_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>